ruka-lang.org/src/lib/interpreter/fixtures/ok/comp-no-binding.ruka
let main = () do
	let xs = { 1 for 0..3 }
	ruka.println(xs)
end
