ruka-lang.org/src/lib/interpreter/fixtures/type-err/let-record-on-tuple.ruka
// expect: record destructure expects a record value
let pair = () do .(1, 2)

let main = () do
	let { a, b } = pair()
end
